# langchain

./: .gitignore  README.md  pyproject.toml  requirements.txt
agentic_ai/: aisuite.ipynb
jd/: genai.ipynb  genaifast.py
langchainupdated/: 1-langchainintro.ipynb  4-messages.ipynb  5-structuredoutput.ipynb  langchainintro.ipynb
practice/: langchain_practice.ipynb  langraph_practice.ipynb
rag_project/: agent.py  app.py  fastapicode.py  langraphcsv.ipynb  langraphrag.py  testing.ipynb
