[project]
name = "langchain-demo"
version = "0.1.0"
description = "https://youtu.be/rV3HJ4LEZ7k?si=ar-HeJ7A-dGCd_qJ"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "python-dotenv>=1.2.2",
]
